k8s/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      volumes:
        - name: postgres-storage
          persistentBVolumeClaim:
            claimName: database-persistent-volume-claim
      containers:
        - name: postgres
          image: postgres # directly from Docker Hub
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-storage # name of volume above
              mountPath: /var/lib/postgresql/data
              subPath: postgres # any data inside the container
