k8s/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: api
  template:
    metadata:
      labels:
        component: api
    spec:
      containers:
        - name: api
          image: stephengrider/multi-server
          ports:
            - containerPort: 5000
          env: # accepts only String, wrapped in quotes
            - name: REDIS_HOST
              value: redis-cluster-ip-service
            - name: REDIS_PORT
              value: '6379' # default REDIS port
            - name: PGUSER
              value: postgres
            - name: PGHOST
              value: postgres-cluster-ip-service
            - name: PGPORT
              value: '5432' # default postgres port
            - name: PGDATABASE
              value: postgres
            - name: PGPASSWORD
              valueFrom:
              #kubectl create secret generic pgpassword --from-literal PGPASSWORD=secret_password
                secretKeyRef:
                  name: pgpassword
                  key: PGPASSWORD
