k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: web # match deployment template/metadata/labels
  ports:
    - port: 3000 # port to access this service
      targetPort: 3000 # port the container is running on
