k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: postgres # match deployment template/metadata/labels
  ports:
    - port: 5432 # port to access this service
      targetPort: 5432 # port the container is running on
