k8s/redis-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: redis # match deployment template/metadata/labels
  ports:
    - port: 6379 # port to access this service
      targetPort: 6379 # port the container is running on
