k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: server-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: api # match deployment template/metadata/labels
  ports:
    - port: 5000 # port to access this service
      targetPort: 5000 # port the container is running on
