k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations: # specifies higher level config around ingress config created
    kubernetes.io/ingress.class: nginx # create ingress controller based on nginx project
    nginx.ingress.kubernetes.io/rewrite-target: / # how nginx behaves
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api/
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
